# agentic-basic

./: .gitignore  README.md  main.py  makefile  pyproject.toml
app/: celery.py  main.py
app/__mock__/: feedback.csv
app/core/: settings.py
app/modules/insight/: methods.py  prompts.py  schema.py  tasks.py
app/utils/: openai.py  tavily.py
